--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@
 }
 
 body {
-    background: linear-gradient(to right, #21212c, #0c1a4a);
+    background-color: #FF3CAC;
+    background-image: linear-gradient(126deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
 }
 
 input[type=text]:focus {
@@ -13,29 +14,50 @@ input[type=text]:focus {
     background-color: rgb(182, 199, 255);
 }
 
-#snum {
-    top: 5vh;
-}
-
-.smth, label, #Result {
+label, #Result {
     color: white;
 }
 
-h1 {
+.Title, #Result, #fnum-title, #snum-title, .Basic-Operations > button:focus, .Advanced-Operations > button:focus {
     text-align: center;
+    background-color: #F4D03F;
+    background-image: linear-gradient(270deg, #b300ff 0%, #ffffff 50%);
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    border: 0;
 }
 
-.Buttons {
+.Basic-Operations {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 5px;
-    gap: 10px 10px;
-    
+    gap: 10px 10px;   
 }
 
-ol li{
+.Advanced-Operations-Parent {
+    position: relative;
+}
+
+
+.Advanced-Operations {
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+    gap: 10px 10px;   
+    top: 15px;
+}
+
+.Basic-Operations > button, .Advanced-Operations > button {
+    width: 100px;
+}
+
+.Number-Fields-Child li{
     display: inline-block;
     margin: 10px 10px;
 }
