--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,14 @@
     box-sizing: border-box;
 }
 
+:root {
+    --opacity-rate: 0.5;
+}
+
+input::placeholder {
+    color: white;
+}
+
 ol, ul {
     list-style: none;
     margin: 0;
@@ -12,7 +20,7 @@ html {
 }
 
 body {
-    background-image: linear-gradient(1800deg, #181717, rgb(14, 13, 13));
+    background-color: #0d1117;
     padding: 10px;
     height: 100%;
     margin: 0;
@@ -27,11 +35,11 @@ body {
     top: 10px;
     left: 10px;
     right: 10px;
-    background-image: linear-gradient(90deg, #14283e, #081a2d);
+    background-color: #161b22;
 }
 
 .Modes {
-    background-image: linear-gradient(90deg, #14283e, #081a2d);;
+    background-color: #161b22;;
     /* border: 1px solid whitesmoke; */
     border-radius: 15px;
     position: absolute;
@@ -83,7 +91,7 @@ body {
 }
 
 .Results {
-    background-image: linear-gradient(90deg, #14283e, #081a2d);;
+    background-color: #161b22;
     /* border: 1px solid whitesmoke; */
     border-radius: 15px;
     position: absolute;
@@ -115,13 +123,9 @@ body {
 .Results-Section > li {
     /* background-image: radial-gradient(#19294b, #101d3a); */
     /* border: 1px solid whitesmoke; */
-    border-radius: 15px;
+    border-radius: 30px;
     padding: 10px;
-    animation: 4s shine infinite linear;
-}
-
-.Results-Section > li:hover {
-    background-color: #7663ff20;
+    animation: 6s shine infinite linear;
 }
 
 .Results-Input {
@@ -137,7 +141,7 @@ body {
     min-height: 80px;
     background-color: #ffffff;
     border-radius: 30px;
-    background-image: linear-gradient(90deg, #2e5757, #1a2f2f);
+    background-image: linear-gradient(90deg, #293649, #161b22);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -148,10 +152,14 @@ body {
 .Simple-Number-Input {
     margin-top: 5px;
     width: 70%;
-    background-color: #417272;
+    background-color: #7663ff20;
     border: 0px;
     height: 30%;
     border-radius: 15px;
+    font-size: larger;
+    padding-left: 5%;
+    color: white;
+    
 }
 
 label, #Result {
@@ -234,23 +242,24 @@ label, #Result {
 }
 
 @keyframes shine {
-    0% {
-        background-color: #1f34495d;
+    0%, 100% {
+        background-color: #161b22;
+        border: 5px solid rgba(168, 168, 168, 0);
+
     }
 
     25% {
-        background-color: #1f344977;
+        background-color: #283343c8;
+        border: 5px solid rgba(168, 168, 168,var(--opacity-rate));
     }
 
     50% {
-        background-color: #1f344994;
+        background-color: #161b22;
+        border: 5px solid rgba(168, 168, 168, 0);
     }
 
     75% {
-        background-color: #1f3449b3;
-    }
-
-    100% {
-        background-color: #1f34495d;
+        background-color: #2c353f;
+        border: 5px solid rgba(168, 168, 168,var(--opacity-rate));
     }
 }
