--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,8 @@ body {
     border-radius: 30px;
     padding: 10px;
     animation: 6s shine infinite linear;
+    margin-left: 0px;
+    max-height: fit-content;
 }
 
 .Results-Input {
@@ -146,6 +148,8 @@ body {
     flex-direction: column;
     justify-content: center;
     padding-left: 25px;
+    border: 1px solid whitesmoke;
+    max-height: fit-content;
     
 }
 
@@ -159,75 +163,13 @@ body {
     font-size: larger;
     padding-left: 5%;
     color: white;
-    
 }
 
-label, #Result {
-    color: white;
-}
-
-.Title, #Result, #fnum-title, #snum-title, .Basic-Operations > button:focus, .Advanced-Operations > button:focus {
-    text-align: center;
-    background-color: #F4D03F;
-    background-image: linear-gradient(270deg, #417272 0%, #ffffff 50%);
-    color: transparent;
-    background-clip: text;
-    -webkit-background-clip: text;
-    border: 0;
-}
-
-.Basic-Operations {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 5px;
-    gap: 10px 10px;
-    margin-top: 400px;   
-}
-
-.Advanced-Operations-Parent {
-    position: relative;
-}
-
-
-.Advanced-Operations {
-    position: absolute;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 5px;
-    gap: 10px 10px;   
-    top: 15px;
-}
-
-.Basic-Operations > button, .Advanced-Operations > button {
-    width: 100px;
-}
-
-.Number-Fields-Child li{
-    display: inline-block;
-    margin: 10px 10px;
-}
-
-#Result {
-    display: flex;
-    justify-content: center;
-}
-
-.Number-Fields {
-    text-align: center;
-    position: relative;
-    top: 20px;
-    /* border: 3px solid rgb(18, 8, 41);
-    transform: translate(-50%, 50%);
-    left: 50%;
-    width: 30%; */
-}
-
-#fnum:hover, #snum:hover {
-    border-radius: 5%;
+.Results-Output {
+    display: grid;
+    grid-template-columns: 2fr;
+    list-style: none;
+    /* border: 1px solid white; */
 }
 
 .Styling-Block {
